small tidy up